overlays/prod/discord/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: discord
spec:
  ports:
  - name: http
    port: 80
  selector:
    app: discord
