overlays/prod/discord/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: discord
spec:
  ingressClassName: nginx
  rules:
  - host: discord.zfwartcc.net
    http:
      paths:
      - backend:
          service:
            name: discord
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - discord.zfwartcc.net
    secretName: tls-discord-zfwartcc-net
